objects/Referral__c.object
<CustomObject><fields>
        <fullName>Appointment_Date__c</fullName>
        <description>Date of the Appointment related to the interaction.</description>
        <formula>Interaction__r.Appointment_Date__c</formula>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>CWID__c</fullName>
        <formula>Student__r.CWID__c</formula>
        <label>CWID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Campus_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campus Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CASA_Referral__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Formula_Name__c</fullName>
        <formula>IF( Other_Resource__c = null,  Campus_Resource__r.Name  ,  Other_Resource__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Interaction_Staff__c</fullName>
        <formula>Interaction__r.Staff__r.Full_Name__c</formula>
        <label>Interaction Staff</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Other_Resource_Email__c</fullName>
        <label>Other Resource Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Other_Resource__c</fullName>
        <label>Other Resource</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Referral_Date__c</fullName>
        <label>Referral Date</label>
        <required>true</required>
        <type>Date</type>
    </fields><fields>
        <fullName>Referred_To_Email__c</fullName>
        <formula>Referred_To__r.Email</formula>
        <label>Referred To Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Referred_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (To)</relationshipLabel>
        <relationshipName>Referrals_To</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Resource_Email_Workflow__c</fullName>
        <description>Supports referral email workflow</description>
        <inlineHelpText>Do not show on a page layout.  System field.</inlineHelpText>
        <label>Resource Email Workflow</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Resource_Email__c</fullName>
        <formula>Campus_Resource__r.Email__c</formula>
        <label>Resource Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Student__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Primarily used by CASA and linked to the Interaction and Case object</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Referral</label><nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Referrals</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>Student__c</columns>
        <columns>CWID__c</columns>
        <columns>Referral_Date__c</columns>
        <columns>NAME</columns>
        <columns>Referred_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>All_resources_NULL</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Campus_Resource__c = NULL, Other_Resource__c = NULL)</errorConditionFormula>
        <errorDisplayField>Campus_Resource__c</errorDisplayField>
        <errorMessage>Please enter either a Campus Resource or Other Resource</errorMessage>
    </validationRules><validationRules>
        <fullName>One_Resource_per_Referral</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Campus_Resource__c  &lt;&gt; NULL, Other_Resource__c  &lt;&gt; NULL)</errorConditionFormula>
        <errorMessage>If you select a Campus Resource, leave Other Resource blank</errorMessage>
    </validationRules></CustomObject>